--- a/src/societe_vs_covid.ipynb
+++ b/src/societe_vs_covid.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quelle departement a eu le plus d'hospitalisation, de réanimation et de déces ?"
+    "### Quelle departement a eu le plus d'hospitalisation, de réanimation et de déces ? (ecrire dans un csv dans /resultat)"
    ]
   },
   {
@@ -266,6 +266,47 @@
     "\n",
     "df_covid_max_hospi_par_dep = df_covid_sum_par_dep.groupBy().max(\"hosp\")\n",
     "df_covid_max_hospi_par_dep.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combien d'homme, femme ou autre, on etait hospitalié par le covid (par departement) ? (ecrire dans un csv dans /resultat) (Louis)\n",
+    "DF1: dep | sexe | sum(hospi)\n",
+    "\n",
+    "      01 | 0    | 120 000\n",
+    "      \n",
+    "      01 | 1    | 120 000\n",
+    "      \n",
+    "      01 | 2    | 160 000\n",
+    "      \n",
+    "      02 | 0    | 160 000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quelle jour a été le plus critique en hospitalisation, reanimation et deces (par departement) (ecrire dans un csv dans /resultat)\n",
+    "DF1: dep | jour | max(hospi)\n",
+    "\n",
+    "DF2: dep | jour | max(rea)\n",
+    "\n",
+    "DF3: dep | jour | max(deces)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quelle est l'impacte du covid sur les société en France sur l'année 2020 ?\n",
+    "\n",
+    "DF societe : dep | date radiation | nb_de_societe_radié\n",
+    "\n",
+    "DF covid : dep   | jour           | hosp | rea | rad | dc\n",
+    "\n",
+    "Df covid_societe : dep | date | nb_de_societe_radié | hosp | rea | rad | dc"
    ]
   }
  ],
