--- a/src/societe_vs_covid.ipynb
+++ b/src/societe_vs_covid.ipynb
@@ -26,7 +26,8 @@
     "from pyspark.sql import *\n",
     "import pyspark.sql.functions as f\n",
     "from pyspark.sql.types import IntegerType\n",
-    "from pyspark.sql.functions import unix_timestamp, from_unixtime"
+    "from pyspark.sql.functions import unix_timestamp, from_unixtime\n",
+    "from pyspark.sql.types import DoubleType, IntegerType"
    ]
   },
   {
@@ -327,6 +328,245 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import Window\n",
+    "\n",
+    "df_covid_max_par_dep_et_jour = df_covid_par_dep.withColumn(\"incid_hosp\", df_covid_par_dep[\"incid_hosp\"].cast(IntegerType()))\n",
+    "df_covid_max_par_dep_et_jour = df_covid_max_par_dep_et_jour.withColumn(\"incid_rea\", df_covid_par_dep[\"incid_rea\"].cast(IntegerType()))\n",
+    "df_covid_max_par_dep_et_jour = df_covid_max_par_dep_et_jour.withColumn(\"incid_dc\", df_covid_par_dep[\"incid_dc\"].cast(IntegerType()))\n",
+    "df_covid_max_par_dep_et_jour = df_covid_max_par_dep_et_jour.withColumn(\"incid_rad\", df_covid_par_dep[\"incid_rad\"].cast(IntegerType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = Window.partitionBy('dep')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Le jour le plus critique en hospitalisation par département"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+----------+\n",
+      "|dep|      jour|incid_hosp|\n",
+      "+---+----------+----------+\n",
+      "|  1|03/11/2020|        66|\n",
+      "| 10|09/04/2020|       157|\n",
+      "| 11|02/04/2020|        31|\n",
+      "| 12|17/11/2020|        23|\n",
+      "| 13|22/10/2020|       198|\n",
+      "| 14|27/10/2020|        38|\n",
+      "| 15|20/11/2020|        28|\n",
+      "| 16|09/12/2020|        15|\n",
+      "| 17|19/01/2021|        31|\n",
+      "| 18|07/01/2021|        33|\n",
+      "| 19|30/10/2020|        15|\n",
+      "|  2|20/04/2020|       106|\n",
+      "| 21|25/03/2020|        76|\n",
+      "| 22|02/04/2020|        16|\n",
+      "| 22|04/11/2020|        16|\n",
+      "| 23|20/01/2021|        19|\n",
+      "| 24|23/03/2020|        23|\n",
+      "| 25|29/03/2020|        68|\n",
+      "| 26|04/11/2020|        53|\n",
+      "| 27|29/10/2020|        28|\n",
+      "+---+----------+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_max_hospi_jour_dep = df_covid_max_par_dep_et_jour.withColumn(\n",
+    "        'max',\n",
+    "        f.max('incid_hosp').over(w)\n",
+    "    ).where(\n",
+    "        f.col('incid_hosp') == f.col('max')\n",
+    "    ).select(\n",
+    "        \"dep\",\n",
+    "        \"jour\",\n",
+    "        \"incid_hosp\"\n",
+    "    ).orderBy(\n",
+    "        \"dep\",\n",
+    "        ascending=True\n",
+    "    ).drop(\"max\")\n",
+    "\n",
+    "df_max_hospi_jour_dep.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Le jour le plus critique en réanimation par département"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+---------+\n",
+      "|dep|      jour|incid_rea|\n",
+      "+---+----------+---------+\n",
+      "|  1|01/04/2020|       14|\n",
+      "| 10|25/11/2020|        6|\n",
+      "| 11|19/03/2020|        5|\n",
+      "| 12|06/11/2020|        4|\n",
+      "| 13|30/03/2020|       34|\n",
+      "| 14|02/04/2020|        8|\n",
+      "| 15|04/09/2020|        3|\n",
+      "| 15|07/11/2020|        3|\n",
+      "| 15|05/11/2020|        3|\n",
+      "| 15|30/10/2020|        3|\n",
+      "| 15|06/12/2020|        3|\n",
+      "| 16|20/01/2021|        4|\n",
+      "| 17|26/03/2020|        7|\n",
+      "| 18|30/03/2020|        4|\n",
+      "| 19|01/04/2020|        3|\n",
+      "| 19|01/11/2020|        3|\n",
+      "| 19|28/03/2020|        3|\n",
+      "|  2|19/03/2020|        8|\n",
+      "| 21|05/11/2020|       17|\n",
+      "| 22|02/04/2020|        9|\n",
+      "+---+----------+---------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_max_rea_jour_dep = df_covid_max_par_dep_et_jour.withColumn(\n",
+    "        'max',\n",
+    "        f.max('incid_rea').over(w)\n",
+    "    ).where(\n",
+    "        f.col('incid_rea') == f.col('max')\n",
+    "    ).select(\n",
+    "        \"dep\",\n",
+    "        \"jour\",\n",
+    "        \"incid_rea\"\n",
+    "    ).orderBy(\n",
+    "        \"dep\",\n",
+    "        ascending=True\n",
+    "    ).drop(\"max\")\n",
+    "\n",
+    "df_max_rea_jour_dep.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Le jour le plus critique en décès par département"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+--------+\n",
+      "|dep|      jour|incid_dc|\n",
+      "+---+----------+--------+\n",
+      "|  1|05/12/2020|      11|\n",
+      "|  1|05/11/2020|      11|\n",
+      "|  1|24/11/2020|      11|\n",
+      "|  1|14/01/2021|      11|\n",
+      "| 10|09/04/2020|      11|\n",
+      "| 11|28/10/2020|       6|\n",
+      "| 12|17/11/2020|       5|\n",
+      "| 12|29/10/2020|       5|\n",
+      "| 12|19/11/2020|       5|\n",
+      "| 13|02/11/2020|      35|\n",
+      "| 14|12/11/2020|       8|\n",
+      "| 15|03/12/2020|       4|\n",
+      "| 16|21/12/2020|       5|\n",
+      "| 17|13/11/2020|       5|\n",
+      "| 18|19/01/2021|      10|\n",
+      "| 19|02/06/2020|       3|\n",
+      "| 19|04/04/2020|       3|\n",
+      "| 19|12/11/2020|       3|\n",
+      "| 19|02/11/2020|       3|\n",
+      "|  2|03/04/2020|      18|\n",
+      "+---+----------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_max_deces_jour_dep = df_covid_max_par_dep_et_jour.withColumn(\n",
+    "        'max',\n",
+    "        f.max('incid_dc').over(w)\n",
+    "    ).where(\n",
+    "        f.col('incid_dc') == f.col('max')\n",
+    "    ).select(\n",
+    "        \"dep\",\n",
+    "        \"jour\",\n",
+    "        \"incid_dc\"\n",
+    "    ).orderBy(\n",
+    "        \"dep\",\n",
+    "        ascending=True\n",
+    "    ).drop(\"max\")\n",
+    "\n",
+    "df_max_deces_jour_dep.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sauvergarder dans un fichier csv "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_file_save = \"../resultat/\"\n",
+    "\n",
+    "# On est obliger de passer par pandas, sinon erreur\n",
+    "df_max_hospi_jour_dep.toPandas().to_csv(path_file_save + 'jour_critique_hospitalisation.csv')\n",
+    "df_max_rea_jour_dep.toPandas().to_csv(path_file_save + 'jour_critique_reanimation.csv')\n",
+    "df_max_deces_jour_dep.toPandas().to_csv(path_file_save + 'jour_critique_deces.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -335,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -952,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
