--- a/src/societe_vs_covid.ipynb
+++ b/src/societe_vs_covid.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problematique\n",
-    "### Quelle est l'impacte du covid sur les société en France sur l'année 2020 ?\n"
+    "## Problématique\n",
+    "### Quel est l'impacte du covid sur les sociétés en France sur l'année 2020 ?\n"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quelle departement a eu le plus d'hospitalisation, de réanimation et de déces ? (ecrire dans un csv dans /resultat)"
+    "### Quel département a eu le plus d'hospitalisations, de réanimations et de décès ? (écrire dans un csv dans /resultat)"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Département avec le plus d'hospitalisation"
+    "#### Département avec le plus d'hospitalisations"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Département avec le plus de réanimation"
+    "#### Département avec le plus de réanimations"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Département avec le plus de decés"
+    "#### Département avec le plus de décès"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quelle jour a été le plus critique en hospitalisation, reanimation et deces (par departement) (ecrire dans un csv dans /resultat)\n",
+    "### Quel jour a été le plus critique en hospitalisations, réanimations et décès (par département) (écrire dans un csv dans /resultat)\n",
     "DF1: dep | jour | max(hospi)\n",
     "\n",
     "DF2: dep | jour | max(rea)\n",
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Le jour le plus critique en hospitalisation par département"
+    "#### Le jour le plus critique en hospitalisations par département"
    ]
   },
   {
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Le jour le plus critique en réanimation par département"
+    "#### Le jour le plus critique en réanimations par département"
    ]
   },
   {
@@ -859,7 +859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lecture du fichier des societé radiees"
+    "### Lecture du fichier des societé radiées"
    ]
   },
   {
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quelle département à eu le plus de radiation d'entreprise en 2020 ? \n",
+    "### Quel département a eu le plus de radiations d'entreprises en 2020 ? \n",
     "\n",
     "DF_final: Num dept | nombre_dentreprise_raddie"
    ]
@@ -1047,7 +1047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quelle est l'impacte du covid sur les société en France sur l'année 2020 ?\n",
+    "### Quel est l'impacte du covid sur les sociétés en France sur l'année 2020 ?\n",
     "\n",
     "DF societe : Num dept | date radiation | nb_de_societe_radié\n",
     "\n",
@@ -1538,7 +1538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sauvergarder dans un fichier csv "
+    "#### Sauvegarder dans un fichier csv "
    ]
   },
   {
@@ -1575,7 +1575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Nombre d'incident covid et de societé radié par mois**"
+    "**Nombre d'incident covid et de societés radiées par mois**"
    ]
   },
   {
@@ -1608,13 +1608,13 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Pour conclure, nous pouvons constaté avec ce graphique  que le covid a eu un impacte sur les dsociete enf rance en 2020.\n",
+    "Pour conclure, nous pouvons constater avec ce graphique que la covid a eu un impacte sur les sociétés en France en 2020.\n",
     "\n",
-    "Nous voyons ici que l'impacte est effectif 2 mois apres les piques\n",
+    "Nous voyons ici que l'impacte est effectif 2 mois après les piques.\n",
     "\n",
-    "Par exemple en mars/ avril il y a une augmentation d'hospitalisation ce qui est répercuter 2 mois apres avec l'augmentation du nombre de societe radié.\n",
+    "Par exemple en mars / avril il y a une augmentation d'hospitalisations ce qui s'est répercuté 2 mois après avec l'augmentation du nombre de sociétés radiées.\n",
     "\n",
-    "**OUI** le covid a eu un impacte sur les societe en france"
+    "**OUI** la covid a eu un impacte sur les sociétés en France."
    ]
   }
  ],
